unpackaged/main/default/objects/pse__Revenue_Forecast__c/pse__Revenue_Forecast__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__RevenueForecastHelp</customHelpPage>
    <description>Stores the revenue forecast for a project or an opportunity.</description>
    <label>Revenue Forecast</label>
    <nameField>
        <displayFormat>RF-{00000000}</displayFormat>
        <label>Revenue Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecasts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>