unpackaged/main/default/objects/pse__Revenue_Forecast__c/fields/psa_Weighted_Revenue_Pending_Recognition__c.field-meta.xml
<CustomField>
    <fullName>psa_Weighted_Revenue_Pending_Recognition__c</fullName>
    <formula>IF( pse__Project__r.RecordType.Name = 'Delivery', pse__Corp_Revenue_Pending_Recognition__c , pse__Corp_Revenue_Pending_Recognition__c* pse__Project__r.Probability__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted: Revenue Pending Recognition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>