unpackaged/main/default/objects/pse__Revenue_Forecast__c/fields/pse__Corp_Scheduled_Revenue__c.field-meta.xml
<CustomField>
    <fullName>pse__Corp_Scheduled_Revenue__c</fullName>
    <description>In the corporate currency, the revenue that is scheduled for recognition on this revenue forecast.</description>
    <inlineHelpText>In the corporate currency, the revenue that is scheduled for recognition on this revenue forecast.</inlineHelpText>
    <label>Corp: Scheduled Revenue</label>
    <summarizedField>pse__Revenue_Forecast_Type__c.pse__Corp_Scheduled_Revenue__c</summarizedField>
    <summaryForeignKey>pse__Revenue_Forecast_Type__c.pse__Revenue_Forecast__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>