unpackaged/main/default/objects/pse__Revenue_Forecast__c/fields/pse__Corp_Unscheduled_Revenue__c.field-meta.xml
<CustomField>
    <fullName>pse__Corp_Unscheduled_Revenue__c</fullName>
    <description>In the corporate currency, revenue that is currently unscheduled. If there are months that do not contain any scheduled or actual revenue, the unscheduled revenue is spread evenly across those months, except for empty months that fall between months containing scheduled or actual revenue.</description>
    <inlineHelpText>In the corporate currency, revenue that is currently unscheduled.</inlineHelpText>
    <label>Corp: Unscheduled Revenue</label>
    <summarizedField>pse__Revenue_Forecast_Type__c.pse__Corp_Unscheduled_Revenue__c</summarizedField>
    <summaryForeignKey>pse__Revenue_Forecast_Type__c.pse__Revenue_Forecast__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>