unpackaged/main/default/objects/pse__Revenue_Forecast__c/fields/pse__Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>pse__Last_Updated__c</fullName>
    <description>Date and time when this revenue forecast was last updated.</description>
    <inlineHelpText>Date and time when this revenue forecast was last updated.</inlineHelpText>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>