unpackaged/main/default/objects/pse__Revenue_Forecast__c/fields/pse__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>pse__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the opportunity this revenue forecast relates to.</description>
    <inlineHelpText>Lookup to the opportunity this revenue forecast relates to.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Revenue Forecasts</relationshipLabel>
    <relationshipName>Revenue_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>