unpackaged/main/default/objects/pse__Revenue_Forecast__c/fields/pse__Time_Period__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Period__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the time period set on this revenue forecast.</description>
    <inlineHelpText>Lookup to the time period set on this revenue forecast.</inlineHelpText>
    <label>Time Period</label>
    <referenceTo>pse__Time_Period__c</referenceTo>
    <relationshipLabel>Revenue Forecasts</relationshipLabel>
    <relationshipName>Revenue_Forecasts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>