unpackaged/main/default/objects/pse__Revenue_Forecast__c/fields/pse__Time_Period_End__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Period_End__c</fullName>
    <description>End date of the time period this record relates to.</description>
    <formula>pse__Time_Period__r.pse__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>End date of the time period this record relates to.</inlineHelpText>
    <label>Time Period End</label>
    <type>Date</type>
</CustomField>